Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7772

catalogs shouldn't destroy plain llogs twice

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      if plain llog is found corrupted, then llog_process_thread() cancels all the remaining records which in turn causes destroy of the plain llog. but it's still referenced by the catalog in-core structure and llog_cat_close() may try to destroy it again causing a panic.

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: